# blaze-explorer

./: Cargo.toml  LICENSE.MD  readme.md
.github/workflows/: rust.yml
blaze_explorer/: Cargo.toml
blaze_explorer_lib/: Cargo.toml
blaze_explorer_lib/src/: action.rs  app.rs  app_context.rs  app_input_machine.rs  app_settings.rs  command.rs  command_history.rs  components.rs  core_features.rs  explorer_helpers.rs  flash_input_machine.rs  function_helpers.rs  input_machine.rs  lib.rs  line_entry.rs  logging.rs  mode.rs  motion.rs  plan.md  plugin.rs  query.rs  testing_utils.rs  themes.rs  tools.rs
blaze_explorer_lib/src/action/: action_builder.rs
blaze_explorer_lib/src/command/: command_helpers.rs  command_utilities.rs  command_utils.rs  explorer_commands.rs  file_commands.rs  navigation_commands.rs
blaze_explorer_lib/src/components/: command_line.rs  component_helpers.rs  explorer_manager.rs  explorer_table.rs  preview.rs
blaze_explorer_lib/src/components/explorer_table/: explorer_styling.rs  explorer_utils.rs
blaze_explorer_lib/src/core_features/: add.rs  favourites.rs  rename.rs
blaze_explorer_lib/src/history_stack/: command_history.rs  directory_history.rs
blaze_explorer_lib/src/input_machine/: input_machine_helpers.rs  input_machine_macros.rs  key_type.rs  permutation_set.rs
blaze_explorer_lib/src/plugin/: base_popup.rs  plugin_commands.rs  plugin_helpers.rs  plugin_popup.rs
blaze_explorer_macro_tests/: Cargo.toml
blaze_explorer_macros/: Cargo.toml
docs/: pull_request_template.md
src/: action.rs  action_agent.rs  app.rs  app_context.rs  app_input_machine.rs  command.rs  command_history.rs  component.rs  components.rs  directory_history.rs  explorer_helpers.rs  flash_input_machine.rs  focus.rs  function_helpers.rs  git_helpers.rs  history_stack.rs  input_machine.rs  key_combination.rs  key_handler.rs  lib.rs  line_entry.rs  logging.rs  main.rs  mode.rs  plugin.rs  plugin_manifest.rs  plugins.txt  popup.rs  simple_input_machine.rs  telescope.rs  telescope_input_machine.rs  telescope_query.rs  themes.rs
(+17 files in other folders)
